コミット漏れ

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-pwa-test",
+  "name": "nuxt-non-pwa-test",
   "version": "1.0.0",
   "description": "My mathematical Nuxt.js project",
   "author": "Yuichiro Nakaoka",
